--- a/package.json
+++ b/package.json
@@ -234,8 +234,8 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.0",
     "@google/generative-ai": "^0.18.0",
+    "animejs": "^4.2.1",
     "axios": "^1.7.0",
     "web-features": "^1.0.0"
   }
 }
-
